--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -345,7 +345,9 @@ a{
     bottom: 0;   
     width:10rem;
     height:1.5rem;
+    background-color: #F2F2F2
   }
+ 
 /* ------------- 悬浮特效 --------------- */
   .enlarge img{
     transition: transform 0.3s;
