--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -1,353 +1,3 @@
-a{
-  text-decoration: none;
-}
-/* ------------- module ----------------- */
-  .module{
-    position: absolute;    
-    z-index: 49;
-    box-sizing: border-box;
-    line-height: 0.48rem;
-  }
-  #app .module{
-    overflow: visible;
-  }
-/* ------------- rectangle -------------- */
-  .rectangle{
-    width: 3rem;
-    height: 1rem;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-  }
-  .rectangle a,.radius a{
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-/* ------------- editor ----------------- */
-  .editor{
-    box-sizing: border-box;
-    padding: 0.2rem;
-    width: 10rem;
-    height: 5rem;
-    word-break:break-all;
-    word-wrap:break-word;
-    border:1px solid #ccc;
-  }
-  .editor * {
-    font-size: inherit;
-    line-height: inherit;
-    color: inherit;
-  }
-  .editor a:hover {
-    text-decoration:none;
-  }
-  .editor p {
-    margin:5px 0;
-  }
-/* ------------- picture ---------------- */
-  .picture {
-    width: 5rem;
-    height: 2.88rem;  
-  }
-  .picBox{
-    display: block;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  .picture img{
-    width: 100%;
-    min-height: 100%;   
-  }
-/* ------------- button ----------------- */
-  .button{
-    width: 2rem;
-    height: 0.8rem;
-    border: 1px solid #bbbbbb;
-    border-radius: 4px;
-    line-height: 0.8rem;
-    text-align: center;
-    cursor: pointer;
-    box-sizing: border-box;
-  }
-  .button a{
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-    font-size: inherit;
-    line-height: inherit;
-    overflow: hidden;
-    color: inherit;
-  }
-/* ------------- line ------------------- */
-  .hline{
-    width: 10rem;  
-    max-height: 0px;
-    height: 0!important;   
-    border: 0;
-    border-top-width: 1px;
-    border-left-width: 0px!important;
-    border-right-width: 0px!important;
-    border-bottom-width: 0px!important;
-    border-style: solid;
-    border-color: #333;    
-  }
-  .hline .resizeBox{
-    padding: 5px 0;
-    margin-top: -6px;
-    box-sizing: content-box;
-  }
-  .hline .resize{
-    display: none;
-  }
-  .hline .resize.e,.hline .resize.w{
-    display: block;
-  }
-  .sline{
-    max-width: 0px;
-    width: 0px!important;
-    height: 10rem;
-    border: 0;
-    border-top-width: 0px!important;
-    border-left-width: 1px;
-    border-right-width: 0px!important;
-    border-bottom-width: 0px!important;   
-    border-style: solid;
-    border-color: #333;     
-  }  
-  .sline .resize{
-    display: none;
-  }
-  .sline .resize.n,.sline .resize.s{
-    display: block;
-  }
-  .sline .resizeBox{
-    padding: 0 5px;
-    margin-left: -6px;
-    box-sizing: content-box;
-  }  
-/* ------------- menubar ---------------- */
-  .menubar{
-    width: 1.33rem;
-    height: 1.33rem;
-    background-color: #f2f2f2;
-  }
-  .menubar-icon{
-    width: 100%;
-    height: 100%;    
-    background-image: url(http://static.ebanhui.com/design/image/menu.png);
-    background-size: 0.5333rem auto;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-/* ------------- editAdd ---------------- */
-  .module .editAdd{
-    width: 100%;
-    height: 100%;
-  }
-  .module .editAdd .add-icon{
-    width: 100%;
-    height: 100%;
-    background: url(icon/addmodule.png) center center no-repeat;   
-    border:1px solid #c0c0c0;
-    box-sizing: border-box;
-    background-color: #F2F2F2;
-  }
-  .module .editAdd .add-icon:hover{
-    background-color: #169BD5;
-  }
-/* ------------- course ----------------- */
-  .course{
-    width: 4.4rem;
-    height: 4rem;   
-    cursor: pointer; 
-    background-color: #fff;       
-  }
-  .course .imgbox {
-    height: 2.48rem;
-    min-height: 2.48rem;    
-  }
-  .course .listBox{    
-     position: relative;
-     width: 100%;
-     height: 100%;
-     overflow: hidden;
-  }  
-  .course .imgbox img{
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  .course .courseTit{  
-    height: 0.533rem;
-    line-height: 0.533rem;
-    font-size: 0.4rem;
-    color: #333;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  .course .speak, .course .number, .course .popularity,.course .price{
-    float: left;
-    width: 2.2rem;
-    font-size: 0.32rem;
-    line-height: 0.48rem;
-    height: 0.48rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    color: #999999;
-  }
-  .course .price{
-    color: #FF6600;
-  }
-  .course .number i{    
-    display: inline-block;
-    margin-right: 0.2rem;
-    width: 0.32rem;
-    height: 0.32rem;
-    line-height: 0.48rem;
-    background: url(http://static.ebanhui.com/design/image/man.png) no-repeat left center;
-    background-size: auto 100%;
-  }
-  .course .popularity i{
-    display: inline-block;
-     margin-right: 0.1rem;
-    width: 0.32rem;
-    height: 0.32rem;
-    background: url(http://static.ebanhui.com/design/image/time.png) no-repeat left center;
-    background-size: auto 100%;
-  }
-  .editAdd div:nth-child(4){
-    text-align: right;
-  }
-  .editAdd div:nth-child(6){
-    text-align: right;
-  }
-/* ------------- audition --------------- */
-  .audition {
-    width: 4.4rem;
-    height: 3.6rem;
-    cursor: pointer;
-  }
-   .audition .editAdd{
-    width: 100%;
-    height: 100%;
-  }
-  .audition a{
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-  }
-  .audition img {
-    width: 4.4rem;
-    height: 2.48rem;
-  }
-  .audiTit{
-    float: left;
-    width: 100%;
-    display: inline-block;
-    height: 0.48rem;
-    line-height: 0.48rem;
-    font-size: 0.4rem;
-    color: #333;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }   
-  .audition .speak, .audition .number{
-    float: left;
-    width: 2.2rem;
-    font-size: 0.32rem;
-    line-height: 0.48rem;
-    height: 0.48rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    color: #999999;
-  }
-  .audition .number i{    
-    display: inline-block;
-    margin-right: 0.2rem;
-    width: 0.32rem;
-    height: 0.32rem;
-    line-height: 0.48rem;
-    background: url(http://static.ebanhui.com/design/image/man.png) no-repeat left center;
-    background-size: auto 100%;
-  }
-/* ------------- teacher ---------------- */
-  .teacher{
-    width: 4.4rem;
-    height: 5.73rem;
-  } 
-  .teacher .editAdd{
-    width: 100%;
-    height: 100%;
-  }
-  .teacher .addtea-icon{
-    width: 100%;
-    height: 100%;
-    background: url(icon/addtea.png) center center no-repeat;
-    background-size: auto 100% ;
-  }
-  .teacher .editAdd .team_bk {
-    width: 100%;
-    height: 100%;
-
-  }    
-  .teacher .editAdd  .team_hbj {
-      height:4.26rem;
-      width:100%;
-      padding-top:1px;
-  }
-  .teacher .editAdd  .team_hbj img {
-    border-radius:100%;
-    margin:0 auto;
-    display: block;
-    width:2.61rem;
-    height:2.61rem;
-  }
-  .teacher .editAdd  .team_h3 {
-    display: inline-block;
-    font-size:0.4rem;
-    line-height: 0.7rem;
-    text-align:center;
-    width:100%;
-    overflow:hidden;
-    color:#333
-  }
-  .teacher .editAdd  .team_p1 {
-    display: inline-block;
-    color:#999;
-    text-align:center;
-    width:100%;
-    overflow:hidden;
-    font-size:0.32rem;   
-    height: 0.7rem;
-    line-height: 0.7rem;
-  }
-  .teacher .editAdd .team_p2 {
-    display: inline-block;   
-    width:100%;
-    height: 1.44rem;
-    text-align:left;
-    color:#333;
-    font-size:0.32rem;
-    line-height:0.48rem;
-    overflow: hidden;  
-  }
-/* ------------- footernav -------------- */
-  .footernav{
-    position:fixed;
-    left:0;
-    bottom: 0;   
-    width:10rem;
-    height:1.5rem;
-    background-color: #F2F2F2
-  }
- 
 /* ------------- 悬浮特效 --------------- */
   .enlarge img{
     transition: transform 0.3s;
@@ -582,3 +232,503 @@ a{
   input:-moz-placeholder{color: inherit;font-size: inherit;}                  /* Firefox版本4-18 */
   input::-moz-placeholder{color: inherit;font-size: inherit;}                  /* Firefox版本19+ */
   input:-ms-input-placeholder{color: inherit;font-size: inherit;}           /* IE浏览器 */
+a{
+  text-decoration: none;
+}
+/* ------------- module ----------------- */
+  .module{
+    position: absolute;    
+    z-index: 49;
+    box-sizing: border-box;
+    line-height: 0.48rem;
+  }
+  #app .module{
+    overflow: visible;
+  }
+/* ------------- rectangle -------------- */
+  .rectangle{
+    width: 3rem;
+    height: 1rem;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+  }
+  .rectangle a,.radius a{
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+/* ------------- editor ----------------- */
+  .editor{
+    box-sizing: border-box;
+    padding: 0.2rem;
+    width: 10rem;
+    height: 5rem;
+    word-break:break-all;
+    word-wrap:break-word;
+    border:1px solid #ccc;
+  }
+  .editor * {
+    font-size: inherit;
+    line-height: inherit;
+    color: inherit;
+  }
+  .editor a:hover {
+    text-decoration:none;
+  }
+  .editor p {
+    margin:5px 0;
+  }
+/* ------------- picture ---------------- */
+  .picture {
+    width: 5rem;
+    height: 2.88rem;  
+  }
+  .picBox{
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  .picture img{
+    width: 100%;
+    min-height: 100%;   
+  }
+/* ------------- button ----------------- */
+  .button{
+    width: 2rem;
+    height: 0.8rem;
+    border: 1px solid #bbbbbb;
+    border-radius: 4px;
+    line-height: 0.8rem;
+    text-align: center;
+    cursor: pointer;
+    box-sizing: border-box;
+  }
+  .button a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    font-size: inherit;
+    line-height: inherit;
+    overflow: hidden;
+    color: inherit;
+  }
+/* ------------- line ------------------- */
+  .hline{
+    width: 10rem;  
+    max-height: 0px;
+    height: 0!important;   
+    border: 0;
+    border-top-width: 1px;
+    border-left-width: 0px!important;
+    border-right-width: 0px!important;
+    border-bottom-width: 0px!important;
+    border-style: solid;
+    border-color: #333;    
+  }
+  .hline .resizeBox{
+    padding: 5px 0;
+    margin-top: -6px;
+    box-sizing: content-box;
+  }
+  .hline .resize{
+    display: none;
+  }
+  .hline .resize.e,.hline .resize.w{
+    display: block;
+  }
+  .sline{
+    max-width: 0px;
+    width: 0px!important;
+    height: 10rem;
+    border: 0;
+    border-top-width: 0px!important;
+    border-left-width: 1px;
+    border-right-width: 0px!important;
+    border-bottom-width: 0px!important;   
+    border-style: solid;
+    border-color: #333;     
+  }  
+  .sline .resize{
+    display: none;
+  }
+  .sline .resize.n,.sline .resize.s{
+    display: block;
+  }
+  .sline .resizeBox{
+    padding: 0 5px;
+    margin-left: -6px;
+    box-sizing: content-box;
+  }  
+/* ------------- menubar ---------------- */
+  .menubar{
+    width: 1.33rem;
+    height: 1.33rem;
+    background-color: #f2f2f2;
+  }
+  .menubar-icon{
+    width: 100%;
+    height: 100%;    
+    background-image: url(http://static.ebanhui.com/design/image/menu.png);
+    background-size: 0.5333rem 0.48rem;
+    background-position: center;
+    background-repeat: no-repeat;
+  }  
+/* ------------- editAdd ---------------- */
+  .module .editAdd{
+    width: 100%;
+    height: 100%;
+  }
+  .module .editAdd .add-icon{
+    width: 100%;
+    height: 100%;
+    background: url(icon/addmodule.png) center center no-repeat;   
+    border:1px solid #c0c0c0;
+    box-sizing: border-box;
+    background-color: #F2F2F2;
+  }
+  .module .editAdd .add-icon:hover{
+    background-color: #169BD5;
+  }
+/* ------------- course ----------------- */
+  .course{
+    width: 4.4rem;
+    height: 4rem;   
+    cursor: pointer; 
+    background-color: #fff;       
+  }
+  .course .imgbox {
+    height: 2.48rem;
+    min-height: 2.48rem;    
+  }
+  .course .listBox{    
+     position: relative;
+     width: 100%;
+     height: 100%;
+     overflow: hidden;
+  }  
+  .course .imgbox img{
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .course .courseTit{  
+    height: 0.533rem;
+    line-height: 0.533rem;
+    font-size: 0.4rem;
+    color: #333;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  .course .speak, .course .number, .course .popularity,.course .price{
+    float: left;
+    width: 2.2rem;
+    font-size: 0.32rem;
+    line-height: 0.48rem;
+    height: 0.48rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #999999;
+  }
+  .course .price{
+    color: #FF6600;
+  }
+  .course .number i{    
+    display: inline-block;
+    margin-right: 0.2rem;
+    width: 0.32rem;
+    height: 0.32rem;
+    line-height: 0.48rem;
+    background: url(http://static.ebanhui.com/design/image/man.png) no-repeat left center;
+    background-size: auto 100%;
+  }
+  .course .popularity i{
+    display: inline-block;
+     margin-right: 0.1rem;
+    width: 0.32rem;
+    height: 0.32rem;
+    background: url(http://static.ebanhui.com/design/image/time.png) no-repeat left center;
+    background-size: auto 100%;
+  }
+  .editAdd div:nth-child(4){
+    text-align: right;
+  }
+  .editAdd div:nth-child(6){
+    text-align: right;
+  }
+/* ------------- audition --------------- */
+  .audition {
+    width: 4.4rem;
+    height: 3.6rem;
+    cursor: pointer;
+  }
+   .audition .editAdd{
+    width: 100%;
+    height: 100%;
+  }
+  .audition a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+  }
+  .audition img {
+    width: 4.4rem;
+    height: 2.48rem;
+  }
+  .audiTit{
+    float: left;
+    width: 100%;
+    display: inline-block;
+    height: 0.48rem;
+    line-height: 0.48rem;
+    font-size: 0.4rem;
+    color: #333;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }   
+  .audition .speak, .audition .number{
+    float: left;
+    width: 2.2rem;
+    font-size: 0.32rem;
+    line-height: 0.48rem;
+    height: 0.48rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #999999;
+  }
+  .audition .number i{    
+    display: inline-block;
+    margin-right: 0.2rem;
+    width: 0.32rem;
+    height: 0.32rem;
+    line-height: 0.48rem;
+    background: url(http://static.ebanhui.com/design/image/man.png) no-repeat left center;
+    background-size: auto 100%;
+  }
+/* ------------- teacher ---------------- */
+  .teacher{
+    width: 4.4rem;
+    height: 5.73rem;
+  } 
+  .teacher .editAdd{
+    width: 100%;
+    height: 100%;
+  }
+  .teacher .addtea-icon{
+    width: 100%;
+    height: 100%;
+    background: url(icon/addtea.png) center center no-repeat;
+    background-size: auto 100% ;
+  }
+  .teacher .editAdd .team_bk {
+    width: 100%;
+    height: 100%;
+
+  }    
+  .teacher .editAdd  .team_hbj {
+      height:4.26rem;
+      width:100%;
+      padding-top:1px;
+  }
+  .teacher .editAdd  .team_hbj img {
+    border-radius:100%;
+    margin:0 auto;
+    display: block;
+    width:2.61rem;
+    height:2.61rem;
+  }
+  .teacher .editAdd  .team_h3 {
+    display: inline-block;
+    font-size:0.4rem;
+    line-height: 0.7rem;
+    text-align:center;
+    width:100%;
+    overflow:hidden;
+    color:#333
+  }
+  .teacher .editAdd  .team_p1 {
+    display: inline-block;
+    color:#999;
+    text-align:center;
+    width:100%;
+    overflow:hidden;
+    font-size:0.32rem;   
+    height: 0.7rem;
+    line-height: 0.7rem;
+  }
+  .teacher .editAdd .team_p2 {
+    display: inline-block;   
+    width:100%;
+    height: 1.44rem;
+    text-align:left;
+    color:#333;
+    font-size:0.32rem;
+    line-height:0.48rem;
+    overflow: hidden;  
+  }
+/* ------------- footernav -------------- */
+  .footernav{
+    position:fixed;
+    left:0;
+    bottom: 0;   
+    width:10rem;
+    height:1.5rem;
+    background-color: #F2F2F2
+  }
+  .footernav .editbox{
+    width: 100%;
+    height: 100%;
+  }
+  .footernav li{
+    float: left;   
+  }
+  .footernav li.one{
+    width: 100%;
+  }
+  .footernav li.two{
+    width: 50%;
+  }
+  .footernav li.three{
+    width: 33.33%;
+  }
+  .footernav li.four{
+    width: 25%;
+  }
+  .footernav li.five{
+    width: 20%;
+  }
+  .footernav li img{
+    display: block;
+    margin: 0.213rem auto 0.1rem;
+    width: 0.64rem;
+    height: 0.64rem;
+  }
+  .footernav li img:nth-child(1){
+    display: block;
+  }
+  .footernav li img:nth-child(2){
+    display: none;
+  }
+  .footernav li.on img:nth-child(1){
+    display: none;
+  }
+  .footernav li.on img:nth-child(2){
+    display: block;
+  }
+  .footernav li span{
+    display: block;
+    text-align: center;
+    color: #333;
+    font-size: 0.32rem;
+  }
+/* ------------- information ------------ */
+  .information {
+    width: 10rem;  
+  }
+  .information .inforCon{
+    border-top: 1px solid #C8C8C8;
+  }
+  .information li{
+    padding: 0.133rem;
+    width: 10rem;
+    height: 2.25rem;
+    box-sizing: border-box;
+    border-bottom: 1px solid #C8C8C8;
+    overflow: hidden;
+  }
+  .information li .title{
+    float: left;
+    width: 5.867rem;
+    height: 1.6rem;
+    color: #777;
+    font-size: 0.48rem;
+    line-height: 0.53rem;
+    word-break:break-all;
+    overflow: hidden;
+  }
+  .information li img.newImg{
+    float: right;
+    width: 3.04rem;
+    height: 1.92rem;
+  }
+  .information li .info{
+    float: left;
+    width: 5.867rem;
+    height: 0.534;
+    font-size: 0.32rem;
+  }
+  .information li .info span{
+    margin-right: 5px;
+    color: #ccc;
+  }
+  .information li.news-text{
+    height: 0.85rem;  
+    border-bottom: 0;
+  }
+  .information li.news-text img {
+    float: left;
+    width: 0.53rem;
+    height: 0.53rem;
+  }
+  .information li.news-text .title{
+    text-indent: 0.13rem;
+    display: inline-block; 
+    height: 0.59rem;
+    line-height: 0.59rem;
+    font-size: 0.427rem;
+    max-width: 9.2rem;
+    width: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+/* ------------- carousel --------------- */
+  .carousel {
+    width:10rem; 
+    height:4.53rem 
+  }
+  .carousel img{
+    width: 100%;
+    height: 100%;
+  }
+  .carousel .screenBox{
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  .carousel .screenBox .img_ul {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  .carousel .screenBox .barbox{
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    z-index: 3;    
+  }
+  .barbox li {
+    width: 0.32rem;
+    height: 0.32rem;
+    float: left;
+    margin: 0 0.08rem;  
+    border-radius: 50%;
+    background-color:#6297c5; 
+  }
+  .barbox li.on {
+    background-color:#9E9E9E;
+  }
+  .transition {
+     transition: all 400ms;
+    -moz-transition: all 400ms; 
+    -webkit-transition: all 400ms; 
+    -o-transition: all 400ms;
+  }
