--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -374,7 +374,35 @@ a{
     background-size: 0.5333rem 0.48rem;
     background-position: center;
     background-repeat: no-repeat;
-  }  
+  } 
+  .menu-fixed{
+    display: none;
+    position: fixed;
+    left: 0;
+    top:0 ;
+    width: 5rem;
+    height: 100%;
+    background-color: #333;
+  }
+  .menu-fixed li{
+    width: 100%;
+    display: inline-block;
+    text-indent: 1.6rem;
+    font-size: 0.375rem;
+    background-size: 0.427rem 0.427rem;
+    background-repeat: no-repeat;
+    background-position:1rem center;
+    border-bottom: 1px solid #4A4D54;
+  }
+  .menu-fixed .rj{
+    float: right;
+    width: 1rem;
+    height: 100%;
+    background-image: url(http://static.ebanhui.com/design/image/jt.png);
+    background-repeat: no-repeat;
+    background-size: 0.427rem 0.427rem;
+    background-position: center;
+  }
 /* ------------- editAdd ---------------- */
   .module .editAdd{
     width: 100%;
@@ -731,4 +759,10 @@ a{
     -moz-transition: all 400ms; 
     -webkit-transition: all 400ms; 
     -o-transition: all 400ms;
+  }
+/* ------------- headers ----------------- */
+  .headers{
+    width: 10rem;
+    height: 1.33rem;
+    background-color: #F2F2F2;
   }
