--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -365,7 +365,7 @@ a{
   .menubar{
     width: 1.33rem;
     height: 1.33rem;
-    background-color: #f2f2f2;
+    background-color: #f2f2f2;   
   }
   .menubar-icon{
     width: 100%;
@@ -404,7 +404,7 @@ a{
     background-position: center;
   }
 /* ------------- editAdd ---------------- */
-  .module .editAdd{
+  .module .editAdd{   
     width: 100%;
     height: 100%;
   }
@@ -688,11 +688,12 @@ a{
   .information li .info{
     float: left;
     width: 5.867rem;
-    height: 0.534;
+    height: 0.534rem;
     font-size: 0.32rem;
   }
   .information li .info span{
     margin-right: 5px;
+    font-size: 0.32rem;
     color: #ccc;
   }
   .information li.news-text{
@@ -765,4 +766,5 @@ a{
     width: 10rem;
     height: 1.33rem;
     background-color: #F2F2F2;
+    z-index: 1;
   }
