--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -258,7 +258,7 @@ a{
     height: 100%;
   }
 /* ------------- editor ----------------- */
-  .editor{
+  #app .editor{
     box-sizing: border-box;
     padding: 0.2rem;
     width: 10rem;
@@ -267,6 +267,13 @@ a{
     word-wrap:break-word;
     border:1px solid #ccc;
   }
+  #app .editor a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  
   .editor * {
     font-size: inherit;
     line-height: inherit;
@@ -276,7 +283,7 @@ a{
     text-decoration:none;
   }
   .editor p {
-    margin:5px 0;
+    margin:0.133rem 0;
   }
 /* ------------- picture ---------------- */
   .picture {
