--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -264,8 +264,7 @@ a{
     width: 10rem;
     height: 5rem;
     word-break:break-all;
-    word-wrap:break-word;
-    border:1px solid #ccc;
+    word-wrap:break-word;    
   }
   #app .editor a{
     display: block;
@@ -288,7 +287,9 @@ a{
 /* ------------- picture ---------------- */
   .picture {
     width: 5rem;
-    height: 2.88rem;  
+    height: 2.88rem; 
+    border-style: solid;
+    border-color: #000;  
   }
   .picBox{
     display: block;
@@ -298,7 +299,7 @@ a{
   }
   .picture img{
     width: 100%;
-    min-height: 100%;   
+    min-height: 100%;      
   }
 /* ------------- button ----------------- */
   .button{
