--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -68,8 +68,8 @@
     list-style-type: none;
   }
   .content{
-    min-height: 1800px;
-    margin-bottom: 100px;
+    /*min-height: 1800px;*/
+    /*margin-bottom: 100px;*/
   }  
   .wrap_login{
     float: right;
