--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -3,8 +3,7 @@
     font-size: 12px;
     margin:0;
     padding:0;
-    font-family: -apple-system, "SF UI Text", "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Zen Hei", sans-serif;
-    /*font-family: "Microsoft YaHe";*/
+    font-family: "Microsoft YaHei";   
   }
   a:-webkit-any-link{
     color: inherit;
@@ -30,8 +29,8 @@
     overflow: hidden;
   }
   ::-webkit-scrollbar {
-      width: 4px;
-      height: 12px;
+      width: 8px;
+      height: 8px;
   }
   ::-webkit-scrollbar-track-piece{
     /*  background-color: #fff; */
@@ -44,7 +43,7 @@
       -webkit-border-radius: 3px;
   }
   ::-webkit-scrollbar-thumb:horizontal{
-      width: 4px;
+      width: 8px;
       background-color: #c9c9c9;
      /* -webkit-border-radius: 6px;*/
   }
