--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -3,7 +3,10 @@
     font-size: 12px;
     margin:0;
     padding:0;
-    font-family: "Microsoft YaHei";   
+   /* font-family: "Microsoft YaHei";   */
+  }
+  html,body{
+    font-family: "Microsoft YaHei";
   }
   a:-webkit-any-link{
     color: inherit;
