--- a/src/assets/module.css
+++ b/src/assets/module.css
@@ -93,6 +93,7 @@
     /*height: 200px;*/
     word-break:break-all;
     word-wrap:break-word;
+    color: #666666;
     /*border:1px solid #ccc;*/
   }
   .editor * {
@@ -561,6 +562,31 @@
     width: 100%;
     height: 100%;
   }
+  .screenBox .img_bg{
+    width: 100%;
+    height: 30px;
+    background: #000000;
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
+    position: absolute;
+    top:0px;
+  }
+  .screenBox .img_title{
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    color: #ffffff;
+    text-align: center;
+    display:block;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    position: absolute;
+    top:0px;
+    font-size: 16px;
+  }
   .screenBox2 .img_li{
     position: absolute;
     top:0;
@@ -579,7 +605,7 @@
     height: 100%;
     width: 100%;
   }
-  .barbox{
+  .barbox[type=one]{
     position: absolute;
     bottom: 5%;
     left: 50%;
@@ -591,7 +617,7 @@
     height: 12px;
     z-index: 3;
   }
-  .barbox li {
+  .barbox[type=one] li {
     float: left;
     margin: 0 3px;
     width: 12px;
@@ -600,8 +626,55 @@
     background-color:#6297c5;
     cursor: pointer;
   }
-  .barbox li.on {
+  .barbox[type=one] li.on {
     background-color:#9E9E9E;
+  }
+  .barbox[type=two]{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    height: 18px;
+    z-index: 3;
+    width: auto!important;
+  }
+  .barbox[type=two] li{
+    width: 24px;
+    height: 18px;
+    border:1px solid #ffffff;
+    border-top: none;
+    border-bottom: none;
+    border-right: none;
+    float: left;
+    line-height: 18px;
+    text-align: center;
+    color: #ffffff;
+    position: relative;
+    cursor: pointer;
+  }
+  .barbox[type=two] li:last-child{
+    border-right: 1px solid #ffffff;
+  }
+  .barbox[type=two] li div{
+    background: #000000;
+    filter:alpha(opacity=70);
+    -moz-opacity:0.7;
+    -khtml-opacity: 0.7;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
+  }
+  .barbox[type=two] li span{
+    color: #ffffff;
+    display: block;
+    line-height: 18px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    top: 0;
+  }
+  .barbox[type=two] li.on div{
+    background-color:red ;
   }
   .transition {
      transition: all 400ms;
@@ -647,6 +720,8 @@
     font-size: inherit;
     line-height: inherit;
     overflow: hidden;
+  }
+  .button a:first-child{
     color: inherit;
   }
 /*-------------line-----------------*/
@@ -2308,6 +2383,7 @@
     border:1px solid #e5e5e5;
     background: inherit;
     border-radius: 2px;
+    color: #999999;
   }
   .username input,.password  input{
     width: 100%;
@@ -2517,19 +2593,195 @@
 /*information*/
 	.information{
 	  width: 1200px;
-      height: 200px;
-      min-width: 550px;
+	  /*min-width: 550px;*/
 	}
 	.information .resizeBox{
-		min-width: 550px;
+		width: 100%;
+		/*min-width: 550px;*/
 	}
 	.information .inforCon{
-		width: 1200px;
+		width: 100%;
 		height: 100%;
 		color: inherit;
 		font-size: inherit;
 		line-height: inherit;
 	}
+	.information a:hover{
+		color: inherit;
+	}
+	/*资讯样式*/
+	/*图文*/
+	.information .infor-wrap-pic{
+		width: 100%!important;
+		height: 200px;
+	}
+	.information .infor-cont-pic{
+		width: 96%;
+		margin: 0 2%;
+		height: 179px;
+		padding-top: 20px;
+		border-bottom: 1px solid #F5F5F5;
+	}
+	.information .infor-title-pic{
+		display: block;
+		height: 40px;
+		line-height: 40px;
+		font-size: 22px;
+		color: inherit;
+		font-weight: 900;
+		text-decoration: none;
+		min-width: 520px;
+		overflow: hidden;
+		text-overflow:ellipsis;
+		white-space: nowrap;
+	}
+	.information .infor-txt-pic,.information .infor-txt-nopic{
+		height: 139px;
+		width: 100%;
+	}
+	
+	/*有图的样式*/
+	.information .infor-img-a{
+		float: left;
+		width: 210px;
+		height: 128px;
+		text-decoration:none!important;
+	}
+	.information .infor-img-a img{
+		float: left;
+		width: 210px;
+		height: 128px;
+		border: 0 none;
+	}
+	
+	.information .infor-txt-p{
+		width: 942px;
+		height: 128px;
+		float: left;
+		position: relative;
+	}
+	.information .infor-conc{
+		width: 95%;
+		max-height: 110px;
+		color: #919191;
+		font-size: 14px;
+		padding-left: 16px;
+		text-indent: 20px;
+		line-height: 22px;
+		overflow: hidden;
+	}
+	.information .infor-time{
+		position: absolute;
+		right: 0px;
+		height: 24px;
+		bottom: 0px;
+		color: #999999;
+		font-size: 14px;
+		line-height: 24px!important;
+	}
+	/*有图的样式*/
+	/*无图样式*/
+	.information .infor-txt-noimg{
+		width: 100%;
+		height: 128px;
+		position: relative;
+	}
+	.information .infor-conc-noimg{
+		width: 95%;
+		max-height: 110px;
+		color: #919191;
+		font-size: 14px;
+		padding-left: 16px;
+		text-indent: 20px;
+		line-height: 22px;
+		overflow: hidden;
+	}
+	.information .infor-time-noimg{
+		position: absolute;
+		right: 0px;
+		bottom: 0px;
+		height: 24px;
+		color: #999999;
+		font-size: 14px;
+		line-height: 24px!important;
+	}
+	/*无图样式*/
+	
+	/*纯文字*/
+	.infor-wrap-txt{
+		width: 100%!important;
+		display: block;
+		height: 12px;
+		font-size: inherit;
+		color: inherit;
+		line-height: 12px;
+	}
+	.infor-wrap-txt *{
+		color: inherit;
+		font-size: inherit;
+	}
+	.infor-cont-txt{
+		width: 100%;
+		height: 100%;
+		border:0 none;
+	}
+	.infor-icon{
+		float:left;
+	}
+	.infor-titlea{
+		float: left;
+		text-decoration:none!important;
+	}
+	.infor-title-txt{
+		width: 100%;
+		height: 100%;
+		text-indent:5px;
+		min-width: 120px;
+		overflow: hidden;
+		text-overflow:ellipsis;
+		white-space: nowrap;
+	}
+	
+	/*滚动资讯*/
+	.infor-wrap-scroll{
+		width: 100%;
+		height:40px;
+		font-size: inherit;
+		color: inherit;
+		line-height: inherit;
+		overflow:hidden;
+		position:relative;
+	}
+	.infor-wrap-scroll *{
+		color: inherit;
+		font-size: inherit;
+		line-height: inherit;
+	}
+	.infor-ul-scroll{
+		height: 100%;
+		position:absolute;
+		left:0px;
+		top:0px;
+	}
+	.infor-li-scroll{
+		float: left;
+		margin: 0 5px;
+		height:40px;
+	}	
+	.infor-li-scroll .infor-icon-scroll{
+		float: left;
+		width:20px;
+		height:20px;
+		margin-top:10px;
+		margin-right: 5px;
+	}
+	.infor-li-scroll a{
+		text-decoration: none!important;
+		float: left;
+		height:40px;
+	}		
+	
+  /*资讯样式*/
 /*introduce*/
 	.introduce{
 	  width: 580px;
@@ -2742,8 +2994,114 @@
     color: #ccc;
   }
 
-
-
+/*calendar*/
+  .calendar{
+    width: 180px;
+    height:130px;
+    line-height: 16px;
+    text-align: center;
+    color: #0af;
+    background-color: #fff;
+  }  
+  .calendar .worldDate{ 
+    margin-top: 5px;  
+    font-size: 14px;
+    color: #666;
+  }
+  .calendar .numDay{
+    height: 76px;
+    line-height: 76px;
+    font-size: 64px;
+    font-family: Arial;
+    color: inherit;
+  }
+  .calendar .chinaDay{   
+    font-size: 16px;
+    font-weight: bolder;
+    color: #666;
+    letter-spacing: 1px;
+  }
+/*scene*/
+  .scene{
+    width:260px;
+    height:190px;
+    background-color: #fff;
+  }
+  .scene-top{
+    height: 42px;
+    line-height: 42px;
+    border-bottom: 1px dashed #e5e5e5;
+  }
+  .scene-top .scene-city{
+    font-size: 15px;
+    margin-left: 10px;
+  }
+  .scene-top .scene-change{
+    margin-left: 5px;
+    font-size: 15px;
+    color: #ffaf23;
+  }
+  .scene-demo{
+    display: none;
+  }
+  .scene-air{
+    float: right;
+  }
+  .scene-airquality{
+    float: right;
+    /*display: inline-block;*/
+    height: 18px;
+    line-height: 18px;
+    text-align: center;
+    padding: 4px 6px;  
+    margin-top: 8px;  
+    margin-right: 11px;
+    margin-left: 5px;
+    background-color: #65bf10;
+    color: #fff;
+    border-radius: 4px;
+  }
+  .scene-ul{
+    height: 148px;
+  }
+  .scene-ul li{
+    float: left;
+    width: 33.3%;
+    height: 100%;
+    text-align:center;
+    color: #999;
+  }
+  .scene-ul .scene-on{
+     color: #666;
+  }
+  .scene-date{
+    display: block;
+    height: 24px;
+    line-height: 24px;    
+  }
+  .scene-icon{
+    display: block;
+    margin: 0 auto;
+    width: 32px;
+    height: 32px;
+  }
+  .scene-ul .scene-temp{
+    display: block;
+    height: 14px;
+    line-height: 14px;
+    margin-top: -10px;
+    text-indent: 36px;
+    color: #2aabff;
+  }
+  .scene-weather{
+    display: block;
+  }
+  .scene-tempSection{
+    display: block;
+  }
+  .scene-wind{
+    display: block;
+  }
 /*天气*/
 	.weather-box{
 		width: 100%;
@@ -2925,129 +3283,6 @@
 	}
 /*类型四样式*/
 
-
-/*资讯样式*/
-	/*图文*/
-	.infor-wrap-pic{
-		width: 1140px;
-		height: 180px;
-		padding: 20px 30px 0px 30px;
-	}
-	.infor-cont-pic{
-		width: 100%;
-		height: 180px;
-		border-bottom: 1px solid #F5F5F5;
-	}
-	.infor-title-pic{
-		width: 100%;
-		height: 40px;
-		line-height: 40px;
-		font-size: 22px;
-		color: #616161;
-		font-weight: 900;
-		min-width: 490px;
-		overflow: hidden;
-		text-overflow:ellipsis;
-		white-space: nowrap;
-	}
-	.infor-img{
-		width: 100%;
-		height: 140px;
-	}
-	.infor-img .infor-img-a{
-		float: left;
-		width: 210px;
-		height: 128px;
-		text-decoration:none!important;
-	}
-	.infor-img .infor-img-a img{
-		float: left;
-		width: 210px;
-		height: 128px;
-		border: 0 none;
-	}
-	.infor-desc{
-		float: left;
-		width: 930px;
-		height: 128px;
-		position: relative;
-		min-width: 280px;
-	}
-	.infor-desc-no{
-		float: left;
-		width: 100%;
-		height: 128px;
-		position: relative;
-	}
-	.infor-desc-text{
-		float: left;
-		width: 100%;
-		height: 128px;
-		position: relative;
-	}
-	.infor-conc{
-		width: 100%;
-		max-height: 110px;
-		color: #919191;
-		font-size: 14px;
-		padding-left: 16px;
-		text-indent: 20px;
-		line-height: 22px;
-		overflow: hidden;
-	}
-	.infor-time{
-		position: absolute;
-		right: -20px;
-		bottom: -5px;
-		color: #999999;
-		font-size: 14px;
-	}
-	
-	/*纯文字*/
-	.infor-wrap-txt{
-		width: 1140px;
-		height:40px;
-		padding:0;
-		font-size: inherit;
-		color: inherit;
-		line-height: inherit;
-	}
-	.infor-wrap-txt *{
-		color: inherit;
-		font-size: inherit;
-		line-height: inherit;
-	}
-	.infor-cont-txt{
-		width: 100%;
-		height: 40px;
-		border:0 none;
-	}
-	.infor-icon{
-		float:left;
-		width:20px;
-		height:20px;
-		margin-top:5px;
-	}
-	.infor-titlea{
-		float: left;
-		width: 90%;
-		text-decoration:none!important;
-	}
-	.infor-titlea:hover{
-		color: inherit;
-	}
-	.infor-title-txt{
-		width: 100%;
-		height: 40px;
-		text-indent:10px;
-		font-weight: 900;
-		min-width: 490px;
-		overflow: hidden;
-		text-overflow:ellipsis;
-		white-space: nowrap;
-	}
-  /*资讯样式*/
-
   /*地图样式*/
   .BMap_top{
     display: block;
@@ -3083,7 +3318,8 @@
     display: inline-block;
     cursor: pointer;
     height: 100%;
-    width: 80px;
+    /*width: 80px;*/
+    padding: 0px 10px;
     text-align: center;
     line-height: 30px;
     font-size: 16px;
