--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -42,7 +42,7 @@
   ::-webkit-scrollbar-thumb:vertical{
       height: 8px;
       width: 3px;
-      background-color: #c9c9c9;
+      background-color: rgba(217,217,217,0.8);
       -webkit-border-radius: 3px;
   }
   ::-webkit-scrollbar-thumb:horizontal{
